Module 11/m11a04monsters5-handout/grading/2024-11-20-12-18-48/compile.err
Test99.java:25: error: cannot find symbol
        ClassTestUtils.checkSuperclass(Thing.class, Monster.class);
                                       ^
  symbol:   class Thing
  location: class Test99
Test99.java:26: error: cannot find symbol
        ClassTestUtils.checkConstructorImplPublic(Thing.class, new Class<?>[] {String.class});
                                                  ^
  symbol:   class Thing
  location: class Test99
Test99.java:27: error: cannot find symbol
        ClassTestUtils.checkFieldsPrivate(Thing.class);
                                          ^
  symbol:   class Thing
  location: class Test99
3 errors
